--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "material-ui": "^0.20.2",
     "mdbootstrap": "^4.14.0",
     "mdbreact": "^4.25.4",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-history": "^0.18.2",
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "redux": "^4.0.5"
